--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 </head>
 <body>
   <nav class="  bg-[#FFF9F4] shadow-md  ">
-    <div class="sora flex items-center justify-between container mx-auto ">
+    <div class=" container mx-auto sora flex items-center justify-between  ">
       <div  class="flex items-center space-x-2">
         <img src="./c1-assets/logo-header.png" alt="">
-        <h3 class="">Browse<span class="text-yellow-400">4</span>Pets</h3>
+        <h3 class="hidden lg:">Browse<span class="text-yellow-400">4</span>Pets</h3>
       </div>
       <div class="hidden md:flex space-x-4 text-black font-light">
         <a href="" >Find a pet</a>
@@ -83,7 +83,7 @@
     
   </nav>
   <header class="pt-2">
-  <div class="container mx-auto bg-[url('/c1-assets/cat-big.png')] w-full h-[750px] bg-cover bg-center">
+  <div class="container mx-auto bg-[url('./c1-assets/cat-big.png')] w-full h-[750px] bg-cover bg-center">
         <div class="pt-32" >
           <h1 class="adlam-display-regular text-6xl mb-2">Pamper Your Pet,<br> Because They Deserve <br>the Bes</h1>
           <p class="sora text-sm mb-2">Discover a world of treats, toys, and essentials handpicked for <br>your furry friends. Shop now and make tails wag with joy!</p>
@@ -98,32 +98,32 @@
       <h3 class="adlam-display-regular text-4xl mt-32">Browse By Categories</h3>
       <div class="grid grid-cols-2 lg:grid-cols-6 gap-2 text-center ">
         <div class=" px-10 py-8  rounded-xl shadow-md bg-pet-primary space-y-2 overflow-hidden">
-          <img  class=" mx-auto rounded-full  bg-white" src="c1-assets/dog-cartoon.png" alt="">
+          <img  class=" mx-auto rounded-full  bg-white w-[48px] h-[48px]" src="c1-assets/dog-cartoon.png" alt="">
           <h4 class="adlam-display-regular text-xl">Dog</h4>
           <p class="sora text-base">3 items</p>
         </div>
         <div class="px-10 py-8  rounded-xl shadow-md bg-pet-primary space-y-2 overflow-hidden">
-          <img  class=" mx-auto rounded-full bg-white" src="c1-assets/fish-cartoon.png" alt="">
+          <img  class=" mx-auto rounded-full bg-white w-[48px] h-[48px]" src="c1-assets/fish-cartoon.png" alt="">
           <h4 class="adlam-display-regular text-xl">Fish</h4>
           <p class="sora text-base">3 items</p>
         </div>
         <div class="px-10 py-8 rounded-xl shadow-md bg-pet-primary space-y-2 overflow-hidden">
-          <img  class="mx-auto rounded-full bg-white" src="c1-assets/cat-cartoon.png" alt="">
+          <img  class="mx-auto rounded-full bg-white w-[48px] h-[48px]" src="c1-assets/cat-cartoon.png" alt="">
           <h4 class="adlam-display-regular text-xl">Cat</h4>
           <p class="sora text-base">3 items</p>
         </div>
         <div class="px-10 py-8 rounded-xl shadow-md bg-pet-primary space-y-2 overflow-hidden">
-          <img  class="mx-auto rounded-full bg-white" src="c1-assets/bird-cartoon.png" alt="">
+          <img  class="mx-auto rounded-full bg-white w-[48px] h-[48px]" src="c1-assets/bird-cartoon.png" alt="">
           <h4 class="adlam-display-regular text-xl">Birds</h4>
           <p class="sora text-base">3 items</p>
         </div>
         <div class="px-10 py-8 rounded-xl shadow-md bg-pet-primary space-y-2 overflow-hidden">
-          <img  class=" mx-auto rounded-full bg-white" src="c1-assets/mouse-cartoon.png" alt="">
+          <img  class=" mx-auto rounded-full bg-white w-[48px] h-[48px]" src="c1-assets/mouse-cartoon.png" alt="">
           <h4 class="adlam-display-regular text-xl">Small pet</h4>
           <p class="sora text-base">3 items</p>
         </div>
         <div class=" px-10 py-8  rounded-xl shadow-md bg-pet-primary space-y-2 overflow-hidden">
-          <img  class="mx-auto rounded-full bg-white" src="c1-assets/rabbit-cartoon.png" alt="">
+          <img  class="mx-auto rounded-full bg-white w-[48px] h-[48px]" src="c1-assets/rabbit-cartoon.png" alt="">
           <h4 class="adlam-display-regular text-xl">Rabit</h4>
           <p class="sora text-base">3 items</p>
         </div>
@@ -131,9 +131,15 @@
     </section>
     <section class="container mx-auto bg-[#FFF9F4] space-y-10">
       <h3 class="adlam-display-regular text-4xl mt-32">Trending Pet Products</h3>
-      <div class="grid grid-cols-1 lg:grid-cols-2">
+      <div class="">
         <div>
-          
+          <div class="bg-pet-primary p-4">
+            <h3 class="adlam-display-regular text-3xl">T-shirt For Dogs</h3>
+            <p class="sora text-gray-500">Discover a world of treats,toys,and<br>
+              essentials handpicked for
+            </p>
+            <button class="bg-white text-black px-4 py-1 rounded-md hover:bg-gray-100">Shop Now</button>
+          </div>
         </div>
         <div>
 
